SERVER-47612 make storing the LastVote uninterruptible

(cherry picked from commit deebdeecd08b5e0063fa4fd275752eebe4c27bda)