jstests/replsets/remove_newly_added_field_after_finishing_initial_sync.js
@@ -100,16 +100,13 @@ checkWriteConcernTimedOut(res);
 rst.nodes[2].disconnect(rst.nodes);
 assert.commandWorked(primaryColl.insert({a: 3}, {writeConcern: {w: "majority"}}));
 
-// TODO(SERVER-47612): Reinstate these elections in a more robust form.
-/**
- * // Only two nodes are needed for an election (0 and 1).
- * assert.commandWorked(rst.nodes[1].adminCommand({replSetStepUp: 1}));
- *
- * // Reset node 0 to be primary.
- * rst.awaitReplication(null, null, [rst.nodes[0], rst.nodes[1]]);
- * assert.commandWorked(rst.nodes[0].adminCommand({replSetStepUp: 1}));
- * assert.eq(rst.getPrimary(), rst.nodes[0]);
- */
+// Only two nodes are needed for an election (0 and 1).
+assert.commandWorked(rst.nodes[1].adminCommand({replSetStepUp: 1}));
+
+// Reset node 0 to be primary.
+rst.awaitReplication(null, null, [rst.nodes[0], rst.nodes[1]]);
+assert.commandWorked(rst.nodes[0].adminCommand({replSetStepUp: 1}));
+assert.eq(rst.getPrimary(), rst.nodes[0]);
 
 // Initial syncing nodes do not acknowledge replication.
 rst.nodes[1].disconnect(rst.nodes);
@@ -155,16 +152,13 @@ rst.nodes[2].disconnect(rst.nodes);
 rst.nodes[3].disconnect(rst.nodes);
 assert.commandWorked(primaryColl.insert({a: 6}, {writeConcern: {w: "majority"}}));
 
-// TODO(SERVER-47612): Reinstate these elections in a more robust form.
-/**
- * // Only two nodes are needed for an election (0 and 1).
- * assert.commandWorked(rst.nodes[1].adminCommand({replSetStepUp: 1}));
- *
- * // Reset node 0 to be primary.
- * rst.awaitReplication(null, null, [rst.nodes[0], rst.nodes[1]]);
- * assert.commandWorked(rst.nodes[0].adminCommand({replSetStepUp: 1}));
- * assert.eq(rst.getPrimary(), rst.nodes[0]);
- */
+// Only two nodes are needed for an election (0 and 1).
+assert.commandWorked(rst.nodes[1].adminCommand({replSetStepUp: 1}));
+
+// Reset node 0 to be primary.
+rst.awaitReplication(null, null, [rst.nodes[0], rst.nodes[1]]);
+assert.commandWorked(rst.nodes[0].adminCommand({replSetStepUp: 1}));
+assert.eq(rst.getPrimary(), rst.nodes[0]);
 
 // 'newlyAdded' nodes cannot be one of the two nodes to satisfy w:majority.
 rst.nodes[3].reconnect(rst.nodes);
@@ -219,16 +213,13 @@ rst.nodes[2].disconnect(rst.nodes);
 // TODO (SERVER-47499): Uncomment this line.
 // assert.commandWorked(primaryColl.insert({a: 8}, {writeConcern: {w: "majority"}}));
 
-// TODO(SERVER-47612): Reinstate these elections in a more robust form.
-/**
- * // Only three nodes are needed for an election (0, 1, and 3).
- * assert.commandWorked(rst.nodes[1].adminCommand({replSetStepUp: 1}));
- *
- * // Reset node 0 to be primary.
- * rst.awaitReplication(null, null, [rst.nodes[0], rst.nodes[1]]);
- * assert.commandWorked(rst.nodes[0].adminCommand({replSetStepUp: 1}));
- * assert.eq(rst.getPrimary(), rst.nodes[0]);
- */
+// Only three nodes are needed for an election (0, 1, and 3).
+assert.commandWorked(rst.nodes[1].adminCommand({replSetStepUp: 1}));
+
+// Reset node 0 to be primary.
+rst.awaitReplication(null, null, [rst.nodes[0], rst.nodes[1]]);
+assert.commandWorked(rst.nodes[0].adminCommand({replSetStepUp: 1}));
+assert.eq(rst.getPrimary(), rst.nodes[0]);
 
 // 3 nodes are needed for a w:majority write.
 rst.nodes[3].disconnect(rst.nodes);
